--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,9 +16,12 @@
             <ul class="nav navbar-nav navbar-right">  
             	<li>
                     <a class="page-scroll" href="#about">About</a>
+                </li>   
+                <li>
+                    <a class="page-scroll" href="#Personal">Personal</a>
                 </li>            
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#Professional">Professional</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
@@ -45,7 +48,7 @@
 						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
 							<li>
-								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
+								<a href="{{ social.url }}" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-{{ social.icon }}"></i> &nbsp <span class="network-name">{{ social.title }}</span></a>
 							</li>
 							{% endfor %}
 						</ul>
