--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,15 +5,17 @@
               <h2>About Me.</h2>
               <hr class="intro-divider">
               <br/>
+              <img src="img/services/me.jpg" style="width:30%;height:30%;"></img>
+              <br/>
               <font size="4px">
                 <p><font size="5px">Hello,</font></p>
                 <p>My name is <font color="Red">Zach</font>.</p>
               
-                <p>I study <font color="Brown">Computer Science & Economics</font>.</p> 
+                <p>I study Computer Science & Economics</font>.</p> 
           
                 <p>I'm fascinated by how technology is integrated in the world around us.</p>
 
-                <p>I am pursuing a career in the field of <font color="HotPink"> Software Engineering</font>.</p>
+                <p>I am pursuing a career in the field of Software Engineering</font>.</p>
 
                
                 <br/>
