--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,19 +1,19 @@
- <section id="about" class="container content-section text-center">
-        <div id="about_change" class="row">
+<section id="experience" class="container content-section text-center">
+        <div class="content-section-a">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>About Me.</h2>
+              <h2>Experience</h2>
               <hr class="intro-divider">
               <br/>
               <font size="4px">
                 <p><font size="5px">Hello,</font></p>
                 <p>My name is <font color="Red">Zach</font>.</p>
               
-                <p>I study <font color="Brown">Computer Science & Economics</font>.</p> 
+                <p>I study Computer Science & Economics</p> 
           
                 <p>I'm fascinated by how technology is integrated in the world around us.</p>
 
-                <p>I am pursuing a career in the field of <font color="HotPink"> Software Engineering</font>.</p>
+                <p>I am pursuingoidfjvsiojdfhdfuh a career in the field of Software Engineering.</p>
 
                
                 <br/>
