--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+        <!-- particles.js -->
+    <script type="text/javascript" src="js/particles.js"></script>
+
 </head>
