--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,12 +16,9 @@
             <ul class="nav navbar-nav navbar-right">  
             	<li>
                     <a class="page-scroll" href="#about">About</a>
-                </li>   
+                </li>             
                 <li>
-                    <a class="page-scroll" href="#Personal">Personal</a>
-                </li>            
-                <li>
-                    <a class="page-scroll" href="#Professional">Professional</a>
+                    <a class="page-scroll" href="#experience">Experience</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
@@ -42,7 +39,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="intro-message">
-						<h1>{{ page.title }}</h1>
+						<h1>Zachary Shale Weiss</h1>
 						<h3>{{ page.subTitle }}</h3>
 						<hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
@@ -61,4 +58,5 @@
 
 	</div>
 	<!-- /.intro-header -->
+    
 </section>
