--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -178,7 +178,7 @@ hr.small {
     background: linear-gradient(
                      rgba(20,20,20, .7),
                      rgba(20,20,20, .7)),
-                     url(../img/bg.jpg) no-repeat center center scroll;
+                     url(../img/bg1.jpg) no-repeat center center scroll;
 }
 
 /* About */
